# Haskell-Ant-Colony-Opt

./: FP Dump Sheet.xopp  README.md  Specificatie.md  Tutorial.txt
4-to-2-encoder/: main.py  startingPoint.py
control-search-local/: CHANGELOG.md  control-search-local.cabal  output.txt
control-search-local/app/: Main.hs
control-search-local/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
control-search-local/dist-newstyle/packagedb/ghc-8.10.7/: control-search-local-0.1.0.0-inplace.conf  package.cache
control-search-local/dist-newstyle/tmp/src-57726/combinatorial-problems-0.0.5/: Test2.csv
control-search-local/local-search-0.0.7/: Setup.hs  local-search.cabal
control-search-local/local-search-0.0.7/Control/Search/: Local.hs
control-search-local/local-search-0.0.7/Control/Search/Local/: Distributions.hs  Eager.hs  Example.hs  Strategies.hs
control-search-local/local-search-0.0.7/combinatorial-problems-0.0.5/: Test.csv  TestCode.hs  TestTSP.hs  combinatorial-problems.cabal
control-search-local/local-search-0.0.7/combinatorial-problems-0.0.5/CombinatorialOptimisation/: SAT.hi  TSP.hi  TSP.hs
control-search-local/local-search-0.0.7/combinatorial-problems-0.0.5/CombinatorialOptimisation/TSP/: FixedPoint.hi  TestFixedPoint.hs
control-search-local/local-search-0.0.7/combinatorial-problems-0.0.5/FileFormat/: TIM.hs  TSPLIB.hs
control-search-local/local-search-0.0.7/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
(+48 files in other folders)
